Fix for distorted images

--- a/www/css/ratchet.css
+++ b/www/css/ratchet.css
@@ -1709,18 +1709,13 @@ select {
     height: 200px;
 }
 .crop-size {
-    height: 100%;
+    /*
     width: 100%;
+    */
+    height: 100%;
     background-size: contain;
     -moz-background-size: contain;
     -webkit-background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    /*position: fixed;
-    background-size: contain;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    */
 }
